--- a/FIPLY/App/app/src/main/res/layout/fragment_usermanagement.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_usermanagement.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="htl_leonding.fiplyteam.fiply.fragments.FUsererstellung">
+    tools:context="htl_leonding.fiplyteam.fiply.fragments.FUsermanagement">
 
     <Button
         android:id="@+id/btChoose"
@@ -16,6 +16,7 @@
         android:layout_height="100dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:background="@color/colorPrimary"
         android:text="Choose Profile" />
 
     <Button
@@ -24,7 +25,9 @@
         android:layout_height="100dp"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/btChoose"
-        android:layout_marginTop="56dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="50dp"
+        android:background="@color/colorPrimary"
         android:text="Create Profile" />
 
     <Button
@@ -33,7 +36,9 @@
         android:layout_height="100dp"
         android:layout_alignStart="@+id/btChoose"
         android:layout_below="@+id/btChoose"
-        android:layout_marginTop="42dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="50dp"
+        android:background="@color/colorPrimary"
         android:text="Edit Profile" />
 
 </RelativeLayout>
