--- a/FIPLY/App/app/src/main/res/layout/fragment_usermanagement.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_usermanagement.xml
@@ -8,37 +8,62 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="htl_leonding.fiplyteam.fiply.fragments.FUsermanagement">
+    tools:context="htl_leonding.fiplyteam.fiply.fragments.FUsererstellung">
 
-    <Button
-        android:id="@+id/btChoose"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:background="@color/colorPrimary"
-        android:text="Choose Profile" />
+    <LinearLayout
+        android:id="@+id/btEditUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/btCreate"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/btChoose"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="50dp"
-        android:background="@color/colorPrimary"
-        android:text="Create Profile" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/btUserPrevious"
+            android:text="Previous"/>
 
-    <Button
-        android:id="@+id/btEdit"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_alignStart="@+id/btChoose"
-        android:layout_below="@+id/btChoose"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="50dp"
-        android:background="@color/colorPrimary"
-        android:text="Edit Profile" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:id="@+id/btUserNext"
+            android:text="Next"/>
+
+    </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/fraUserInput"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btEditUser" />
+
+    <!--<Button-->
+    <!--android:id="@+id/btChoose"-->
+    <!--android:layout_width="200dp"-->
+    <!--android:layout_height="100dp"-->
+    <!--android:layout_centerHorizontal="true"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:text="Choose Profile" />-->
+
+    <!--<Button-->
+    <!--android:id="@+id/btCreate"-->
+    <!--android:layout_width="200dp"-->
+    <!--android:layout_height="100dp"-->
+    <!--android:layout_alignParentTop="true"-->
+    <!--android:layout_alignStart="@+id/btChoose"-->
+    <!--android:layout_marginTop="56dp"-->
+    <!--android:text="Create Profile" />-->
+
+    <!--<Button-->
+    <!--android:id="@+id/btEdit"-->
+    <!--android:layout_width="200dp"-->
+    <!--android:layout_height="100dp"-->
+    <!--android:layout_alignStart="@+id/btChoose"-->
+    <!--android:layout_below="@+id/btChoose"-->
+    <!--android:layout_marginTop="42dp"-->
+    <!--android:text="Edit Profile" />-->
 
 </RelativeLayout>
