--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser3.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser3.xml
@@ -4,4 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <DatePicker
+        android:id="@+id/dpAge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:maxDate="12.12.2037"
+        android:minDate="01.01.1915" />
 </LinearLayout>
