--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser2.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser2.xml
@@ -8,17 +8,16 @@
         android:id="@+id/sbHeight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
         android:rotation="270" />
 
-    <TextView
-        android:id="@+id/textView2"
+    <SeekBar
+        android:id="@+id/seekBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_above="@+id/sbHeight"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="45dp"
-        android:text="Height" />
+        android:layout_marginBottom="102dp" />
 
 </RelativeLayout>
