--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser4.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser4.xml
@@ -4,4 +4,27 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <RadioButton
+        android:id="@+id/rbBeginner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Beginner" />
+
+    <RadioButton
+        android:id="@+id/rbAverage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Average" />
+
+    <RadioButton
+        android:id="@+id/rbPro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pro" />
+
+    <RadioButton
+        android:id="@+id/rbBodybuilder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bodybuilder" />
 </LinearLayout>
