--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser2.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser2.xml
@@ -13,7 +13,7 @@
         android:rotation="270" />
 
     <SeekBar
-        android:id="@+id/seekBar"
+        android:id="@+id/sbWeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/sbHeight"
