Fixed ReadingMusicError and fixed the Clockview in TrainingsActivity

--- a/FIPLY/App/app/src/main/res/values/colors.xml
+++ b/FIPLY/App/app/src/main/res/values/colors.xml
@@ -8,4 +8,10 @@
     <color name="colorText">#FFFFFF</color>
     <color name="colorTextDark">#000000</color>
     <color name="primary_text_default_material_light">#deffffff</color>
+
+    <color name="awesome">#FFA500</color>
+    <color name="tsPrimary">#93DB70</color>
+    <color name="tsSecondary">#AEEEEE</color>
+    <color name="tsTertiary">#006BFF</color>
+
 </resources>
