--- a/FIPLY/App/app/src/main/res/drawable/buttonshape.xml
+++ b/FIPLY/App/app/src/main/res/drawable/buttonshape.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp"
         android:bottomLeftRadius="20dp"
         android:bottomRightRadius="20dp"
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp"
         />
-    <solid
-        android:color="@color/colorPrimary"
+    <solid android:color="@color/tsTertiary"
         />
     <padding
-        android:left="0dp"
-        android:top="0dp"
-        android:right="0dp"
         android:bottom="0dp"
+        android:left="0dp"
+        android:right="0dp"
+        android:top="0dp"
         />
 </shape> 
