--- a/FIPLY/App/app/src/main/res/layout/fragment_clocksnav.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_clocksnav.xml
@@ -1,25 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentRight="true"
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/btnNavWatch"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_height="65dp"
+        android:layout_weight="1"
         android:text="@string/navWatch" />
 
     <Button
         android:id="@+id/btnNavTimer"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/btnNavWatch"
+        android:layout_height="65dp"
+        android:layout_weight="1"
         android:text="@string/navTimer" />
 
-</RelativeLayout>
+</LinearLayout>
