--- a/FIPLY/App/app/src/main/res/layout/fragment_trainingssession.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_trainingssession.xml
@@ -11,24 +11,37 @@
         android:id="@+id/fraTsMusic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"/>
-    <FrameLayout
-        android:id="@+id/fraTsClocksNav"
+        android:layout_alignParentBottom="true"
+        android:background="@color/tsSecondary" />
+
+    <RelativeLayout
+        android:id="@+id/clocksLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/fraTsMusic"
-        android:layout_alignParentRight="true" />
-    <FrameLayout
-        android:id="@+id/fraTsClocks"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/fraTsMusic"
-        android:layout_alignParentLeft="true" />
+        android:background="@color/tsPrimary">
+
+        <FrameLayout
+            android:id="@+id/fraTsClocksNav"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true" />
+
+        <FrameLayout
+            android:id="@+id/fraTsClocks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true" />
+
+    </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/fraTsUebung"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:layout_above="@id/fraTsClocksNav" />
+        android:layout_above="@id/clocksLayout"
+        android:background="@color/tsSecondary" />
 
 </RelativeLayout>
