--- a/FIPLY/App/app/src/main/res/layout/activity_main.xml
+++ b/FIPLY/App/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:layout_width="250dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/colorPrimary"
+        android:background="@color/darkNavigation"
         android:choiceMode="singleChoice"
         android:divider="@color/colorAccent"
         android:dividerHeight="1dp" />
