--- a/FIPLY/App/app/src/main/res/layout/fragment_trainingssession.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_trainingssession.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:id="@+id/fraTsMusic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/tsSecondary" />
+        android:background="@color/darkTertiary" />
 
     <RelativeLayout
         android:id="@+id/clocksLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/fraTsMusic"
-        android:background="@color/tsPrimary">
+        android:background="@color/darkTertiary">
 
         <FrameLayout
             android:id="@+id/fraTsClocksNav"
@@ -42,6 +38,6 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_above="@id/clocksLayout"
-        android:background="@color/tsSecondary" />
+        android:background="@color/darkTertiary" />
 
 </RelativeLayout>
