--- a/FIPLY/App/app/src/main/res/layout/uebungskatalog_item.xml
+++ b/FIPLY/App/app/src/main/res/layout/uebungskatalog_item.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
+    android:background="@color/darkNavigation"
     android:orientation="vertical"
     android:padding="8dp">
 
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
         android:textColor="@color/colorText"
-        android:background="@color/colorPrimary"
+        android:background="@color/darkNavigation"
         android:layout_margin="2dp"
         android:textSize="25dp" />
 </LinearLayout>
