--- a/FIPLY/App/app/src/main/res/values/styles.xml
+++ b/FIPLY/App/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
 <!-- Base application theme. -->
 <style name="AppTheme" parent="@style/Theme.AppCompat.Light">
     <!-- Customize your theme here. -->
-    <item name="colorPrimary">@color/colorPrimary</item>
+    <item name="colorPrimary">@color/darkNavigation</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
 </style>
