--- a/FIPLY/App/app/src/main/res/layout/fragment_countdown.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_countdown.xml
@@ -7,21 +7,26 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <EditText
-        android:id="@+id/etTimer"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_margin="2dp"
-        android:inputType="number" />
-
     <Button
         android:id="@+id/btnTimerStart"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:layout_toRightOf="@+id/etTimer"
         android:background="@drawable/buttonshape"
         android:text="@string/timerStart" />
+
+    <EditText
+        android:id="@+id/etTimer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_margin="2dp"
+        android:inputType="number"
+        android:textSize="30dp"
+        android:textColor="@color/darkPrimary"
+        android:layout_toRightOf="@id/btnTimerStart"
+        android:layout_alignTop="@id/btnTimerStart"
+        android:layout_alignBottom="@id/btnTimerStart"
+        android:background="@null"/>
 
 </RelativeLayout>
