--- a/FIPLY/App/app/src/main/res/layout/fragment_uebungdetail.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_uebungdetail.xml
@@ -19,7 +19,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentRight="true"
-    android:buttonTint="@color/black"
+    android:buttonTint="@color/darkPrimary"
+    android:textColor="@color/darkPrimary"
     android:checked="false"
     android:text="Video" />
 
