Added Layout for the Playlist Selecetion

--- a/FIPLY/App/app/src/main/res/layout/fragment_main.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_main.xml
@@ -42,4 +42,15 @@
         android:background="@color/darkNavigation"
         android:text="@string/startEU"
         android:textSize="25dp" />
+
+    <Button
+        android:id="@+id/btStartPlaylist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:background="@color/darkNavigation"
+        android:text="@string/startPlaylist"
+        android:textSize="25dp" />
+
 </LinearLayout>
