Create User Fragments fixed
fixed

--- a/FIPLY/App/app/src/main/res/layout/fragment_createuser.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_createuser.xml
@@ -8,20 +8,11 @@
         android:id="@+id/userCreateWelcome"
         android:layout_width="300dp"
         android:layout_height="150dp"
+        android:text="Willkommen bei Fiply! Bitte geben sie nun ihre Daten ein, damit wir ihnen einen persönlichen Trainingsplan erstellen können."
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="Willkommen bei Fiply! Bitte geben sie nun ihre Daten ein, damit wir ihnen einen persönlichen Trainingsplan erstellen können."
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <Button
-        android:id="@+id/btCUS2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_vertical"
-        android:layout_marginBottom="24dp"
-        android:text=" Next Step" />
+        android:layout_marginTop="45dp" />
 
     <EditText
         android:id="@+id/etFirstName"
@@ -36,24 +27,26 @@
         android:id="@+id/etLastName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/etFirstName"
-        android:layout_below="@+id/textView4"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_below="@+id/textView4"
+        android:layout_alignStart="@+id/etFirstName" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Vorname:"
         android:layout_below="@+id/userCreateWelcome"
         android:layout_centerHorizontal="true"
-        android:text="Vorname:" />
+        android:layout_marginTop="53dp" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Nachname:" />
+        android:text="Nachname:"
+        android:layout_below="@+id/etFirstName"
+        android:layout_alignStart="@+id/textView3"
+        android:layout_marginTop="85dp" />
 </RelativeLayout>
