--- a/FIPLY/App/app/src/main/res/layout/fragment_playlist.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_playlist.xml
@@ -2,48 +2,48 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkTertiary">
+    android:background="@color/darkSecondary">
 
     <LinearLayout
+        android:id="@+id/linearLayoutPl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:id="@+id/linearLayoutPl">
+        android:orientation="horizontal">
 
         <Button
+            android:id="@+id/btPlAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btPlAdd"
             android:text="@string/btPlAdd"/>
 
         <Button
+            android:id="@+id/btPlSave"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btPlSave"
             android:text="@string/btPlSave"/>
 
         <Switch
+            android:id="@+id/switchPl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mode"
-            android:id="@+id/switchPl"/>
+            android:text="Mode" />
 
     </LinearLayout>
 
     <EditText
+        android:id="@+id/etPlName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/etPlName"
         android:layout_above="@id/linearLayoutPl"
         android:text="@string/etPlName"/>
 
     <ListView
+        android:id="@+id/lvPlSongs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/lvPlSongs"
-        android:choiceMode="multipleChoice"
         android:layout_above="@id/etPlName"
-        android:layout_alignParentTop="true"></ListView>
+        android:layout_alignParentTop="true"
+        android:choiceMode="multipleChoice" />
 
 </RelativeLayout>
