--- a/FIPLY/App/app/src/main/res/layout/fragment_uebungdetail.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_uebungdetail.xml
@@ -20,9 +20,9 @@
     android:layout_height="wrap_content"
     android:layout_alignParentRight="true"
     android:buttonTint="@color/darkPrimary"
-    android:textColor="@color/darkPrimary"
     android:checked="false"
-    android:text="Video" />
+    android:text="Video"
+    android:textColor="@color/darkPrimary" />
 
     <TextView
         android:id="@+id/detailUebungName"
@@ -32,7 +32,7 @@
         android:layout_centerHorizontal="true"
         android:layout_gravity="left"
         android:text="@string/detailName"
-        android:textColor="@color/darkTextColor"
+        android:textColor="@color/darkTextColorLight"
         android:textSize="30dp" />
 
     <TextView
@@ -45,7 +45,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="5dp"
         android:text="@string/detailMG"
-        android:textColor="@color/darkTextColor" />
+        android:textColor="@color/darkTextColorLight" />
 
     <TextView
         android:id="@+id/detailMuskelGruppe"
@@ -57,7 +57,7 @@
         android:layout_marginRight="5dp"
         android:layout_toRightOf="@id/staticDetailMuskelGruppe"
         android:text="Test Muskelgruppe"
-        android:textColor="@color/darkTextColor" />
+        android:textColor="@color/darkTextColorLight" />
 
     <TextView
         android:id="@+id/detailZielGruppe"
@@ -69,7 +69,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginRight="5dp"
         android:text="Test Zielgruppe"
-        android:textColor="@color/darkTextColor" />
+        android:textColor="@color/darkTextColorLight" />
 
     <TextView
         android:id="@+id/staticDetailZielGruppe"
@@ -78,7 +78,7 @@
         android:layout_alignStart="@id/staticDetailMuskelGruppe"
         android:layout_below="@+id/staticDetailMuskelGruppe"
         android:text="@string/detailZG"
-        android:textColor="@color/darkTextColor"/>
+        android:textColor="@color/darkTextColorLight" />
 
     <TextView
         android:id="@+id/detailBeschreibung"
@@ -90,7 +90,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginRight="5dp"
         android:text="Test Beschreibung"
-        android:textColor="@color/darkTextColor" />
+        android:textColor="@color/darkTextColorLight" />
 
     <TextView
         android:id="@+id/staticDetailBeschreibung"
@@ -99,7 +99,7 @@
         android:layout_alignStart="@id/staticDetailZielGruppe"
         android:layout_below="@+id/detailZielGruppe"
         android:text="@string/detailDesc"
-        android:textColor="@color/darkTextColor"/>
+        android:textColor="@color/darkTextColorLight" />
 
     <TextView
         android:id="@+id/detailAnleitung"
@@ -109,7 +109,7 @@
         android:layout_below="@id/detailBeschreibung"
         android:layout_marginRight="5dp"
         android:text="Test Anleitung"
-        android:textColor="@color/darkTextColor" />
+        android:textColor="@color/darkTextColorLight" />
 
     <TextView
         android:id="@+id/staticDetailAnleitung"
@@ -118,7 +118,7 @@
         android:layout_alignStart="@id/staticDetailBeschreibung"
         android:layout_below="@+id/detailBeschreibung"
         android:text="@string/detailAnl"
-        android:textColor="@color/darkTextColor"/>
+        android:textColor="@color/darkTextColorLight" />
 
     <WebView
         android:id="@+id/detailUebungVideo"
