--- a/FIPLY/App/app/src/main/res/drawable/clockstabsshape.xml
+++ b/FIPLY/App/app/src/main/res/drawable/clockstabsshape.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/darkTertiary" />
+    <solid android:color="@color/darkSecondary" />
 
     <stroke
         android:width="5dp"
