--- a/FIPLY/App/app/src/main/res/layout/uebungskatalog_item.xml
+++ b/FIPLY/App/app/src/main/res/layout/uebungskatalog_item.xml
@@ -2,7 +2,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/darkNavigation"
     android:orientation="vertical"
     android:padding="8dp">
 
@@ -11,8 +10,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:background="@color/darkTertiary"
+        android:background="@color/darkSecondary"
         android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
-        android:textColor="@color/darkTextColor"
+        android:textColor="@color/darkTextColorLight"
         android:textSize="25dp" />
 </LinearLayout>
