--- a/FIPLY/App/app/src/main/res/values/styles.xml
+++ b/FIPLY/App/app/src/main/res/values/styles.xml
@@ -1,7 +1,10 @@
 <resources>
+    <!-- Base application theme. -->
+    <style name="AppThemeDark" parent="Theme.AppCompat">
+        <item name="android:colorPrimary">@color/darkPrimary</item>
+        <item name="android:colorPrimaryDark">@color/darkSecondary</item>
+        <item name="android:windowBackground">@color/darkSecondary</item>
+        <item name="android:navigationBarColor">@color/darkSecondary</item>
+    </style>
 
-<!-- Base application theme. -->
-<style name="AppTheme" parent="@style/Theme.AppCompat.Light">
-    <!-- Customize your theme here. -->
-</style>
 </resources>
