--- a/FIPLY/App/app/src/main/res/layout/fragment_music.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_music.xml
@@ -40,43 +40,54 @@
         android:layout_toLeftOf="@id/tvMuTotalDur"
         android:layout_toRightOf="@id/tvMuCurrentDur" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btnMuPlay"
         android:layout_width="75dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/seekBarMu"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/play"
         android:text="@string/songPlay" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btnMuStop"
         android:layout_width="75dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/seekBarMu"
         android:layout_toRightOf="@id/btnMuPlay"
-        android:text="@string/songStop" />
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/stop" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btnMuLast"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/seekBarMu"
         android:layout_toRightOf="@id/btnMuStop"
-        android:text="@string/songLast" />
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/last" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btnMuNext"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/seekBarMu"
         android:layout_toRightOf="@id/btnMuLast"
-        android:text="@string/songNext" />
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/next" />
 
-    <Button
+    <ImageButton
         android:id="@+id/btnMuList"
         android:layout_width="75dp"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_below="@id/seekBarMu"
-        android:text="@string/songList" />
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:src="@drawable/listviewpressed" />
 
 </RelativeLayout>
